# ISRO-Files

detect/: .cont.sh.swo  .cont.sh.swp  .depthMap.cpp.swp  CMakeLists.txt  depthMap.cpp  sample.cpp
detect/scripts/: .run.swp  camera.sh  data.sh  data2.sh  lidar.sh  run.sh
